[package]
name = "stampver"
version = "1.0.2"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "A tool for updating project version numbers"
repository = "https://github.com/jlyonsmith/stampver-rs"
keywords = ["version", "command-line", "development"]
categories = ["command-line-utilities", "development-tools"]
license = "Unlicense"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
json5_nodes = "^2.0.0"
evalexpr = "^7.0.1"
chrono = "0.4.19"
regex = "^1.5.4"
walkdir = "^2.3.2"
colored = "^2.0.0"

[dev-dependencies]
tempfile = "^3.2"

[[bin]]
name = "stampver"
path = "src/bin/stampver.rs"
