[package]
name = "stampver"
version = "1.2.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "A tool for updating project version numbers"
repository = "https://github.com/jlyonsmith/stampver-rs"
keywords = ["version", "command-line", "development"]
categories = ["command-line-utilities", "development-tools"]
license = "Unlicense"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
json5_nodes = "^2.0.1"
evalexpr = "^12.0.2"
chrono = "0.4.41"
regex = "^1.11.1"
walkdir = "^2.5.0"
colored = "^3.0.0"
cargo-edit = "0.13.6"

[dev-dependencies]
tempfile = "^3.20"

[[bin]]
name = "stampver"
path = "src/bin/stampver.rs"
