[package]
name = "stampver"
version = "1.4.1"
edition = "2024"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "A tool for updating project version numbers"
repository = "https://github.com/jlyonsmith/stampver-rs"
keywords = ["version", "command-line", "development"]
categories = ["command-line-utilities", "development-tools"]
license = "Unlicense"

[dependencies]
clap = { version = "4", features = ["derive"] }
json5_nodes = "^2.0.2"
evalexpr = "^12.0.3"
regex = "^1.12.3"
log = "0.4.29"
env_logger = "0.11.10"
jiff = "0.2.23"
path-clean = "1.0.1"
anyhow = "1.0.102"

[dev-dependencies]
duct = "1.1.1"

[[bin]]
name = "stampver"
path = "src/bin/stampver.rs"
